--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
           <div>
             <button type="button" class="btn-alt">Cancel</button>
-            <button type="submit" class="btn">Confirm</button>
+            <button type="submit">Confirm</button>
           </div>
         </form>
       </aside>
@@ -41,7 +41,7 @@
               <h2>PLAYER 1</h2>
               <h3>&lt;player-name&gt;</h3>
               <p>X</p>
-              <button>Edit</button>
+              <button class="btn-alt">Edit</button>
             </article>
           </li>
           <li>
@@ -49,7 +49,7 @@
               <h2>PLAYER 2</h2>
               <h3>&lt;player-name&gt;</h3>
               <p>O</p>
-              <button>Edit</button>
+              <button class="btn-alt">Edit</button>
             </article>
           </li>
         </ol>
