--- a/index.html
+++ b/index.html
@@ -1,86 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic Tac Toe</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/modal.css" />
-    <link rel="stylesheet" href="styles/configuration.css" />
-    <link rel="stylesheet" href="styles/game.css" />
-  </head>
-  <body>
-    <div id="backdrop"></div>
-    <header id="main-header">
-      <h1>Play Tic Tac Toe</h1>
-      <p>Built with HTML5, CSS3 and Javascript</p>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Tic Tac Toe</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,400;0,700;1,400&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/styles.css" />
+        <link rel="stylesheet" href="styles/modal.css" />
+        <link rel="stylesheet" href="styles/configuration.css" />
+        <link rel="stylesheet" href="styles/game.css" />
 
-    <main>
-      <aside class="modal" id="configuration-overlay">
-        <h2>Choose your name</h2>
-        <form>
-          <div class="form-control">
-            <label for="playername">Player name:</label>
-            <input type="text" name="playername" id="playername" />
-          </div>
-          <div>
-            <button type="button" class="btn-alt">Cancel</button>
-            <button type="submit">Confirm</button>
-          </div>
-        </form>
-      </aside>
-      <section id="game-configuration">
-        <ol>
-          <li>
-            <article>
-              <h2>PLAYER 1</h2>
-              <h3>&lt;player-name&gt;</h3>
-              <p class="player-symbol">X</p>
-              <button class="btn-alt">Edit</button>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h2>PLAYER 2</h2>
-              <h3>&lt;player-name&gt;</h3>
-              <p class="player-symbol">O</p>
-              <button class="btn-alt">Edit</button>
-            </article>
-          </li>
-        </ol>
-        <button>Start New Game</button>
-      </section>
-      <section id="active-game">
-        <article id="game-over">
-          <h2>You won, <span>&lt;player-name&gt;</span>!</h2>
-          <p>Click &quot;Start New Game&quot; above, to start a new game.</p>
-        </article>
+        <script src="scripts/config.js" defer></script>
+        <script src="scripts/game.js" defer></script>
+        <script src="scripts/app.js" defer></script>
+    </head>
+    <body>
+        <div id="backdrop"></div>
+        <header id="main-header">
+            <h1>Play Tic Tac Toe</h1>
+            <p>Built with HTML5, CSS3 and Javascript</p>
+        </header>
 
-        <p>
-          Its your turn <span id="active-player-name">&lt;player-name&gt;</span>
-        </p>
+        <main>
+            <aside class="modal" id="configuration-overlay">
+                <h2>Choose your name</h2>
+                <form id="myForm">
+                    <div class="form-control">
+                        <label for="playername">Player name:</label>
+                        <input type="text" name="playername" id="playername" />
+                    </div>
+                    <div>
+                        <button type="button" class="btn-alt" id="configCancel">
+                            Cancel
+                        </button>
+                        <button type="submit" id="configConfirm">
+                            Confirm
+                        </button>
+                    </div>
+                </form>
+            </aside>
+            <section id="game-configuration">
+                <ol>
+                    <li>
+                        <article id="player1-details">
+                            <h2>PLAYER 1</h2>
+                            <h3>player 1 name</h3>
+                            <p class="player-symbol">X</p>
+                            <button
+                                class="btn-alt"
+                                id="btn-edit-player1"
+                                data-playerid="1"
+                            >
+                                Edit
+                            </button>
+                        </article>
+                    </li>
+                    <li>
+                        <article id="player2-details">
+                            <h2>PLAYER 2</h2>
+                            <h3>player 2 name</h3>
+                            <p class="player-symbol">O</p>
+                            <button
+                                class="btn-alt"
+                                id="btn-edit-player2"
+                                data-playerid="2"
+                            >
+                                Edit
+                            </button>
+                        </article>
+                    </li>
+                </ol>
+                <button>Start New Game</button>
+            </section>
+            <section id="active-game">
+                <article id="game-over">
+                    <h2>You won, <span>&lt;player-name&gt;</span>!</h2>
+                    <p>
+                        Click &quot;Start New Game&quot; above, to start a new
+                        game.
+                    </p>
+                </article>
 
-        <ol id="game-board">
-          <li class="disabled">X</li>
-          <li class="disabled">O</li>
-          <li></li>
-          <li class="disabled">O</li>
-          <li></li>
-          <li></li>
-          <li class="disabled">X</li>
-          <li></li>
-          <li></li>
-        </ol>
-      </section>
-    </main>
-  </body>
+                <p>
+                    Its your turn
+                    <span id="active-player-name">&lt;player-name&gt;</span>
+                </p>
+
+                <ol id="game-board">
+                    <li class="disabled">X</li>
+                    <li class="disabled">O</li>
+                    <li></li>
+                    <li class="disabled">O</li>
+                    <li></li>
+                    <li></li>
+                    <li class="disabled">X</li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </section>
+        </main>
+    </body>
 </html>
