--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </article>
                     </li>
                 </ol>
-                <button>Start New Game</button>
+                <button id="btn-start-game">Start New Game</button>
             </section>
             <section id="active-game">
                 <article id="game-over">
@@ -94,13 +94,13 @@
                 </p>
 
                 <ol id="game-board">
-                    <li class="disabled">X</li>
-                    <li class="disabled">O</li>
-                    <li></li>
-                    <li class="disabled">O</li>
                     <li></li>
                     <li></li>
-                    <li class="disabled">X</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                     <li></li>
                     <li></li>
                 </ol>
