add event listener for start game button

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 </ol>
                 <button id="btn-start-game">Start New Game</button>
             </section>
+            <div id="status"></div>
             <section id="active-game">
                 <article id="game-over">
                     <h2>You won, <span>&lt;player-name&gt;</span>!</h2>
