--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
                 </p>
 
                 <ol id="game-board">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li data-row="0" data-col="0"></li>
+                    <li data-row="0" data-col="1"></li>
+                    <li data-row="0" data-col="2"></li>
+                    <li data-row="1" data-col="0"></li>
+                    <li data-row="1" data-col="1"></li>
+                    <li data-row="1" data-col="2"></li>
+                    <li data-row="2" data-col="0"></li>
+                    <li data-row="2" data-col="1"></li>
+                    <li data-row="2" data-col="2"></li>
                 </ol>
             </section>
         </main>
