end game and enable start new game

--- a/index.html
+++ b/index.html
@@ -80,15 +80,13 @@
                 <button id="btn-start-game">Start New Game</button>
             </section>
             <div id="status"></div>
+            <article id="game-over">
+                <h2>You won, <span>&lt;player-name&gt;</span>!</h2>
+                <p>
+                    Click &quot;Start New Game&quot; above, to start a new game.
+                </p>
+            </article>
             <section id="active-game">
-                <article id="game-over">
-                    <h2>You won, <span>&lt;player-name&gt;</span>!</h2>
-                    <p>
-                        Click &quot;Start New Game&quot; above, to start a new
-                        game.
-                    </p>
-                </article>
-
                 <p>
                     Its your turn
                     <span id="active-player-name">&lt;player-name&gt;</span>
